# mesh_collision

./: .gitignore  CMakeLists.txt  README.md  model.glb
include/: player.h
src/: main.cpp  player.cpp
